--- a/templates/create.jinja2
+++ b/templates/create.jinja2
@@ -4,8 +4,8 @@
 
 {% block content %}
 <form method="POST">
-    <label for="name-input">Donor:</label><input id="name-input" type="text" donor="donor">
-    <label for="name-input">Amount:</label><input id="name-input" type="number" value="value">
+    <label for="name-input">Donor:</label><input id="name-input" type="text" name="donor">
+    <label for="name-input">Amount:</label><input id="name-input" type="number" name="value">
     <input type="submit" value="Make Donation">
 </form>
 {% endblock content %}
